--- a/app/src/main/res/layout/event_fragment_single_comment.xml
+++ b/app/src/main/res/layout/event_fragment_single_comment.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/body_single_comment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingEnd="0dp"
-    android:paddingStart="16dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,6 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="0dp"
                     android:text="@android:string/status_bar_notification_info_overflow" />
             </LinearLayout>
 
@@ -57,7 +56,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/lorem_ipsum"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:paddingEnd="8dp"
+                android:paddingStart="0dp"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -65,23 +66,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-    <EditText
-        android:id="@+id/comment_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="@string/comment"
-        android:inputType="textMultiLine" />
+        android:orientation="horizontal"
+        android:paddingStart="8dp"
+        android:paddingEnd="0dp">
+
+        <EditText
+            android:id="@+id/comment_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="@string/comment"
+            android:inputType="textMultiLine"
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/send_comment"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_weight="0"
             android:contentDescription="@string/senden"
             android:padding="8dp"
             app:srcCompat="@drawable/ic_menu_send" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/body_single_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="24dp"
+        android:paddingEnd="0dp" />
 </LinearLayout>
