--- a/app/src/main/res/layout/fragment_single_contact.xml
+++ b/app/src/main/res/layout/fragment_single_contact.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/single_contact_layout"
@@ -11,7 +11,7 @@
         android:id="@+id/delete_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,8 +20,8 @@
 
     <EditText
         android:id="@+id/contact_name"
-        android:layout_width="249dp"
-        android:layout_height="wrap_content"
+        android:layout_width="246dp"
+        android:layout_height="match_parent"
         android:ems="10"
         android:inputType="textPersonName"
         android:labelFor="@+id/contact_name"
@@ -35,8 +35,9 @@
 
     <ImageButton
         android:id="@+id/contact_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/contact_name"
@@ -45,4 +46,4 @@
         app:srcCompat="@android:drawable/ic_dialog_dialer"
         tools:ignore="ContentDescription" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
