--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,19 +23,20 @@
                     android:id="@+id/imageView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="144dp"
+                    android:layout_marginStart="144dp"
+                    android:contentDescription="@string/todo"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />
+                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <TextView
                     android:id="@+id/FirstNameText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="7dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="80dp"
                     android:text="@string/vorname"
                     app:layout_constraintEnd_toStartOf="@+id/FirstNameInput"
                     app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +46,8 @@
                     android:id="@+id/FirstNameInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="83dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="70dp"
+                    android:layout_marginTop="72dp"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:labelFor="@+id/FirstNameInput"
@@ -58,7 +59,6 @@
                     android:id="@+id/LastNameText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="2dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/nachname"
@@ -70,7 +70,7 @@
                     android:id="@+id/LastNameInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="83dp"
+                    android:layout_marginEnd="70dp"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:labelFor="@+id/LastNameInput"
@@ -93,7 +93,7 @@
                     android:id="@+id/AdressTextInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="83dp"
+                    android:layout_marginEnd="70dp"
                     android:layout_marginStart="16dp"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -117,7 +117,7 @@
                     android:id="@+id/BirthdateInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="83dp"
+                    android:layout_marginEnd="70dp"
                     android:ems="10"
                     android:inputType="date"
                     android:labelFor="@+id/BirthdateInput"
@@ -129,7 +129,6 @@
                     android:id="@+id/EmailText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="24dp"
                     android:text="@string/e_mail"
@@ -141,7 +140,7 @@
                     android:id="@+id/EmailInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="83dp"
+                    android:layout_marginEnd="70dp"
                     android:ems="10"
                     android:inputType="textEmailSubject"
                     android:labelFor="@+id/EmailInput"
