--- a/app/src/main/res/layout/event_fragment_single_todo.xml
+++ b/app/src/main/res/layout/event_fragment_single_todo.xml
@@ -23,9 +23,17 @@
             android:paddingEnd="8dip"
             android:paddingStart="32dip"
             android:paddingTop="3dip"
-            android:text="@string/status"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
+
+        <CheckBox
+            android:id="@+id/todo_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:gravity="end"
+            android:paddingBottom="3dip"
+            android:paddingTop="3dip" />
 
         <ImageView
             android:id="@+id/todo_delete"
@@ -35,6 +43,7 @@
             android:paddingBottom="6dp"
             android:paddingEnd="6dp"
             android:paddingStart="6dp"
+            android:visibility="visible"
             app:srcCompat="@drawable/delete_icon" />
 
     </TableRow>
