--- a/app/src/main/res/layout/event_fragment_task.xml
+++ b/app/src/main/res/layout/event_fragment_task.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/single_task_back"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="1"
+    android:layout_height="wrap_content"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingRight="8dp"
+    android:stretchColumns="1">
+
     <TableRow>
 
         <TextView
