--- a/app/src/main/res/layout/event_fragment_tasklist.xml
+++ b/app/src/main/res/layout/event_fragment_tasklist.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical"
     android:padding="8dp">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hinzufügen" />
+
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
