--- a/app/src/main/res/layout/event_fragment_tasklist.xml
+++ b/app/src/main/res/layout/event_fragment_tasklist.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hinzufügen" />
