--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -105,8 +105,11 @@
                 android:id="@+id/event_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="Beschreibung"
+                android:inputType="textMultiLine"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
+                android:singleLine="false"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
